--- a/src/app/pages/shop/cart/cart.component.html
+++ b/src/app/pages/shop/cart/cart.component.html
@@ -48,7 +48,7 @@
                                         <td class="product-col">
                                             <div class="product">
                                                 <figure class="product-media">
-                                                    <a [routerLink]="['/product/Geonix/'+ product.inventory.product.id]">
+                                                    <a [routerLink]="['/product/Geonix/'+ product.inventory.product.name]">
                                                         <molla-image [src]="product.inventory.product.image"
                                                             alt="Product">
                                                         </molla-image>
@@ -57,7 +57,7 @@
 
                                                 <h3 class="product-title">
                                                     <a
-                                                        [routerLink]="['/product/Geonix/'+ product.inventory.product.id]">{{ product.inventory.product.name }}</a>
+                                                        [routerLink]="['/product/Geonix/'+ product.inventory.product.name]">{{ product.inventory.product.name }}</a>
                                                 </h3>
                                             </div>
                                         </td>
