--- a/src/app/shared/components/headers/header/header.component.html
+++ b/src/app/shared/components/headers/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header header-intro-clearance header-3">
-   
-    <div class="header-top">
+
+    <!-- <div class="header-top">
         <div [class]="containerClass">
             <div class="header-left">
                 <a href="tel:#"><i class="icon-phone"></i>Call: +91 8920896230</a>
@@ -12,60 +12,26 @@
                     <li>
                         <a href="javascript:;">Links</a>
                         <ul class="dropdown-links">
-                            <!-- <li>
-                                <div class="header-dropdown">
-                                    <a href="javascript:;">USD</a>
-                                    <div class="header-menu">
-                                        <ul>
-                                            <li><a href="javascript:;">Eur</a></li>
-                                            <li><a href="javascript:;">Usd</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li> -->
-                            <!-- <li>
-                                <div class="header-dropdown">
-                                    <a href="javascript:;">English</a>
-                                    <div class="header-menu">
-                                        <ul>
-                                            <li><a href="javascript:;">English</a></li>
-                                            <li><a href="javascript:;">French</a></li>
-                                            <li><a href="javascript:;">Spanish</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li> -->
-                            <div *ngIf="isTrue==false" >
-                            <li class="login"><a href="javascript:;" (click)="showLoginModal($event)">Sign in / Sign
-                                    up</a></li>
-                                </div>
-                                    <div *ngIf="isTrue==true" >
-                                        
-                                           
+                            <div *ngIf="isTrue==false">
+                                <li class="login"><a href="javascript:;" (click)="showLoginModal($event)">Sign in / Sign
+                                        up</a></li>
+                            </div>
+                            <div *ngIf="isTrue==true">
 
-                                        <li class="login"><a href="javascript:;" (click)="onlogout()"><i class="fa-solid fa-arrow-right-from-bracket"></i>Sign out
-                                            </a></li>
-                                    </div>
+
+
+                                <li class="login"><a href="javascript:;" (click)="onlogout()"><i
+                                            class="fa-solid fa-arrow-right-from-bracket"></i>Sign out
+                                    </a></li>
+                            </div>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="header-middle">
-        <!-- <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-    </ul> -->
         <div [class]="containerClass">
             <div class="header-left">
                 <molla-mobile-button></molla-mobile-button>
@@ -76,6 +42,8 @@
                 </a>
             </div>
 
+            <molla-category-menu style="display: contents;"></molla-category-menu>
+
             <div class="header-center d-none d-lg-flex">
                 <molla-header-search></molla-header-search>
             </div>
@@ -85,7 +53,7 @@
                 <div *ngIf="isTrue==true" class="account">
                     <a routerLink="/shop/dashboard" title="My account">
                         <div class="icon profile-icon">
-                            <div  class="icon"><i  class="icon-user"></i></div>
+                            <div class="icon"><i class="icon-user"></i></div>
                             <div class="user_name">
                                 <p>Hi User</p>
                             </div>
@@ -96,9 +64,25 @@
                 <molla-wishlist-menu></molla-wishlist-menu>
 
                 <molla-cart-menu></molla-cart-menu>
-                
-
-                
+            </div>
+            <div class="login-buttons">
+                <ul class="top-menu">
+                    <li>
+                        <a href="javascript:;" class="pl-4">Links <i class="fa-solid fa-caret-down"></i></a>
+                        <ul class="dropdown-links">
+                            <div *ngIf="isTrue==false">
+                                <li class="login">
+                                    <a href="javascript:;" (click)="showLoginModal($event)">Login</a>
+                                </li>
+                            </div>
+                            <div *ngIf="isTrue==true">
+                                <li class="login"><a href="javascript:;" (click)="onlogout()"><i
+                                            class="fa-solid fa-arrow-right-from-bracket"></i>Sign out
+                                    </a></li>
+                            </div>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -106,9 +90,6 @@
     <div class="sticky-wrapper" [style.height]="utilsService.isSticky? utilsService.stickyHeight + 'px' : '' ">
         <div class="header-bottom sticky-header" [class.fixed]="utilsService.isSticky">
             <div [ngClass]="containerClass">
-                <div class="header-left">
-                    <molla-category-menu style="display: contents;"></molla-category-menu>
-                </div>
 
                 <div class="header-center">
                     <molla-main-menu></molla-main-menu>
