--- a/src/app/shared/components/headers/shared/main-menu/main-menu.component.html
+++ b/src/app/shared/components/headers/shared/main-menu/main-menu.component.html
@@ -27,7 +27,7 @@
         </li>       -->
 
         <li > 
-            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 6,'page':1}" class="sf-with-ul set-after" >SSD</a>
+            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 6,'page':1}" class="sf-with-ul set-after" >SSD <i class="fa-solid fa-caret-down"></i></a>
             <div class="megamenu megamenu-md">
                 <div class="row no-gutters"> 
                     <div class="col-md-8">
@@ -49,7 +49,7 @@
                                             <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 8,'page':1}">NVME SSD</a>
                                         </li>  
                                         <li  [class.active]="current.includes('shop/sidebar/{{list}}')">
-                                            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 6,'page':1}">M SATA</a>
+                                            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 16,'page':1}">M SATA</a>
                                         </li>
                                         <li  [class.active]="current.includes('shop/sidebar/{{list}}')">
                                             <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 14,'page':1}">M.2 BREAKABLE</a>
@@ -65,7 +65,7 @@
 
 
         <li > 
-            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 3,'page':1}" class="sf-with-ul set-after" >HDDs</a>
+            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 3,'page':1}" class="sf-with-ul set-after" >HDDs <i class="fa-solid fa-caret-down"></i></a>
             <div class="megamenu megamenu-md">
                 <div class="row no-gutters"> 
                     <div class="col-md-8">
@@ -90,7 +90,7 @@
         </li>
 
         <li > 
-            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 3,'page':1}" class="sf-with-ul set-after" >RAM</a>
+            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 3,'page':1}" class="sf-with-ul set-after" >RAM <i class="fa-solid fa-caret-down"></i></a>
             <div class="megamenu megamenu-md">
                 <div class="row no-gutters"> 
                     <div class="col-md-8">
@@ -219,6 +219,54 @@
         </li>
         <li > 
             <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 10,'page':1}" class="sf-with-ul set-after" >WI-FI</a>
+            <!-- <div class="megamenu megamenu-md">
+                <div class="row no-gutters"> 
+                    <div class="col-md-8">
+                        <div class="menu-col">
+                            <div class="row">
+                                <div class="col-md-6"> 
+                                                                                                
+                                    <ul >
+                                        <li  [class.active]="current.includes('shop/sidebar/{{list}}')">
+                                            <a routerLink="/product/Geonix/12">Desktop RAM</a>
+                                        </li> 
+                                        <li  [class.active]="current.includes('shop/sidebar/{{list}}')">
+                                            <a routerLink="/product/Geonix/12">Laptop RAM</a>
+                                        </li>                                       
+                                    </ul>                                 
+                                </div>                       
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+        </li>
+        <li > 
+            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 15,'page':1}" class="sf-with-ul set-after" >Printer Toner</a>
+            <!-- <div class="megamenu megamenu-md">
+                <div class="row no-gutters"> 
+                    <div class="col-md-8">
+                        <div class="menu-col">
+                            <div class="row">
+                                <div class="col-md-6"> 
+                                                                                                
+                                    <ul >
+                                        <li  [class.active]="current.includes('shop/sidebar/{{list}}')">
+                                            <a routerLink="/product/Geonix/12">Desktop RAM</a>
+                                        </li> 
+                                        <li  [class.active]="current.includes('shop/sidebar/{{list}}')">
+                                            <a routerLink="/product/Geonix/12">Laptop RAM</a>
+                                        </li>                                       
+                                    </ul>                                 
+                                </div>                       
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+        </li>
+        <li > 
+            <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 17,'page':1}" class="sf-with-ul set-after" >PCI Cards</a>
             <!-- <div class="megamenu megamenu-md">
                 <div class="row no-gutters"> 
                     <div class="col-md-8">
