--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
@@ -1,1 +1,63 @@
-<p>carousel-basic works!</p>
+<!-- home page main single slide slider start -->
+<div class="homeslider">
+    <div class="p-0">
+        <ngb-carousel>
+            <ng-template ngbSlide>
+                <div class="homeslider-main one">
+                    <div class="extra">
+                        <h3> <span>NEW EXCLUSIVE</span> </h3>
+                        <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Stunning Visuals </h3>
+                        <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> PC MONITOR </span></h1>
+                        <P> Get Ready To Level UP Your Wrokspace With Our Monitors </P>
+                        <a href="#"
+                            class="animate__animated animate__bounceIn animate__delay-2s animate__faster btn shop-white-btn mt-3">
+                            Shop now
+                            <span>Shop now</span>
+                        </a>
+                    </div>
+                    <div class="desktop-image animate__animated animate__bounceInDown animate__delay-1s">
+                        <img src="assets/images/24 inch PNG (1).png" class="img-fluid">
+                    </div>
+                    <div class="discounttext animate__animated animate__bounceIn animate__delay-2s">
+                        <span>45%</span>
+                        Discount
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide>
+                <div class="homeslider-main two">
+                    <div class="extra">
+                        <h3> <span>NEW EXCLUSIVE</span> </h3>
+                        <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Secure Storage </h3>
+                        <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> HARD DRIVE </span></h1>
+                        <P>The Beating Heart Of Your Computer</P>
+                        <a href="#"
+                            class="animate__animated animate__bounceIn animate__delay-2s animate__faster btn shop-white-btn mt-3">
+                            Shop now
+                            <span>Shop now</span>
+                        </a>
+                    </div>
+                    <div class="hdd animate__animated animate__bounceInDown animate__delay-1s">
+                        <img src="assets/images/1 TB SATA (1).png" class="img-fluid">
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template ngbSlide>
+                <div class="homeslider-main three">
+                    <div class="extra">
+                        <h3> <span>NEW EXCLUSIVE</span> </h3>
+                        <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Performance </h3>
+                        <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> MOTHERBOARD </span></h1>
+                        <P>Experiance Top-Notch Performance and Reliability With Our Motherboard.</P>
+                        <a href="#"
+                            class="animate__animated animate__bounceIn animate__delay-2s animate__faster btn shop-white-btn mt-3">
+                            Shop now
+                            <span>Shop now</span>
+                        </a>
+                    </div>
+                </div>
+            </ng-template>
+        </ngb-carousel>
+    </div>
+</div>
+<!-- home page main single slide slider end -->
