--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -1,19 +1,13 @@
 <main class="main home-page skeleton-body">
 
-    <div class="intro-slider-container mb-5">
+    <!-- <div class="intro-slider-container mb-5">
         <owl-carousel carouselClasses="category-banners-slider owl-simple owl-nav-inside" [options]="introSlider">
-            <div class="intro-slide" style="background-image: url('https://www.geonix.in/assets/images/banner/4.jpeg')">
-            </div>
-            <div class="intro-slide" style="background-image: url('https://www.geonix.in/assets/images/banner/2.jpeg')">
-            </div>
-            <div class="intro-slide" style="background-image: url('https://www.geonix.in/assets/images/banner/3.jpeg')">
-            </div>
-            <div class="intro-slide" style="background-image: url('https://www.geonix.in/assets/images/banner/1.jpeg')">
+            <div class="intro-slide" style="background-image: url('assets/images/Web_banner.gif')">
             </div>
         </owl-carousel>
-    </div>
+    </div> -->
 
-    <!-- <molla-carousel-basic></molla-carousel-basic> -->
+    <molla-carousel-basic></molla-carousel-basic>
 
     <!--  bootstrap slider component start  -->
 
