--- a/src/app/pages/home/index/index.component.scss
+++ b/src/app/pages/home/index/index.component.scss
@@ -1057,7 +1057,7 @@ a{
     } 
 
     .viewdiv-right.one {
-        background-image: url('https://geonix.in/assets/images/banner/3 (1).jpg');
+        background-image: url("https://geonix.in/assets/images/banner/3%20(1).jpg");
         background-size: 55% 125%;
         background-repeat: no-repeat;
         background-position: 100% 0;
