--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -53,6 +53,8 @@
                           <li><a href="/privacy">Privacy Policy</a></li>
                           <li><a href="/warranty">Warranty policy</a></li>
                           <li><a href="/shippingpolicy">Shipping Policy</a></li>
+                          <li><a href="/terms-&-conditions">Terms & Conditions</a></li>
+                          <li><a href="/return-policy">Return Policy</a></li>
                           <li><a href="https://www.geonix.in/E-Waste%20Page%20Link.pdf">Swach Enviro (E-WASTE)</a></li>
                       </ul>
                   </div>
