--- a/src/app/shared/components/page-header/page-header.component.scss
+++ b/src/app/shared/components/page-header/page-header.component.scss
@@ -2,5 +2,5 @@
     // background-image: url('../../../../assets/images/new_topheader.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 275px;
+    height: 25vw;
 }
