--- a/src/app/pages/product/shared/info-tabs/info-one/info-one.component.html
+++ b/src/app/pages/product/shared/info-tabs/info-one/info-one.component.html
@@ -48,7 +48,7 @@
                       
                         <div class="row no-gutters">
                             <div class="col-4">
-                                <h4><a href="javascript:;"></a>{{data.user.email}}</h4>
+                                <h4><a href="javascript:;"></a>{{data.name}}</h4>
                                 <div class="ratings-container">
                                     <div class="ratings">
                                         <div class="ratings-val" [style.width]=" 20*data.rating + '%'"></div>
