--- a/src/app/pages/shop/productcheckout/productcheckout.component.html
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.html
@@ -14,14 +14,7 @@
     <div class="page-content">
         <div class="checkout">
             <div class="container">
-                <div class="checkout-discount">
-                    <!-- <form action="#" id="checkout-discount-form">
-                        <input type="text" class="form-control" required id="checkout-discount-input"
-                            (click)="addOpacity($event)">
-                        <label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here to
-                                enter your code</span></label>
-                    </form> -->
-                </div>
+                
                 <form action="#" [formGroup]="userForm">
                     <div class="row">
                         <div class="col-lg-9">
@@ -229,6 +222,28 @@
                                             <td>Total:</td>
                                             <td><i class="fa-solid fa-indian-rupee-sign"></i>{{discountoffer}}</td>
                                         </tr>
+                                        <div class="checkout-discount" style="width: 150%">
+                                            <div id="checkout-discount-form">
+                                                <input type="text" class="form-control" required id="checkout-discount-input"
+                                                    (click)="addOpacity($event)">
+                                                <label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here to
+                                                        enter your code</span></label>
+                                                </div>
+                                            </div>
+                                            <button type="button" *ngIf="showCoupon" (click)="applycoupon()" class="btn btn-outline-primary-2 btn-order btn-block" style="margin-top: -5px;
+                                            margin-left: 7px;
+                                            /* size: a3; */
+                                            margin-bottom: 15px;">
+                                               
+                                                <span class="btn-text">Apply Coupon</span>
+                                                <span class="btn-hover-text">Apply Coupon</span>
+                            
+                                            </button>
+
+                                            <tr *ngIf="couponApplied" class="summary-total">
+                                                <td>Coupon Applied:</td>
+                                                <td>{{couponCodeApplied}}</td>
+                                            </tr>
                                     </tbody>
                                 </table>
 
@@ -242,7 +257,7 @@
                                       <div class="form-check second_box">
                                         <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2" checked>
                                         <label class="form-check-label" for="flexRadioDefault2">
-                                          Cash on deleivery
+                                          Cash on Delivery
                                         </label>
                                       </div>
                                 </div> 
