--- a/src/app/pages/shop/return/return.component.html
+++ b/src/app/pages/shop/return/return.component.html
@@ -153,7 +153,7 @@
                                       <div class="form-check second_box">
                                         <input class="form-check-input" type="radio" value="COD" (change)="onItemChange($event)" name="flexRadioDefault" id="flexRadioDefault2" checked>
                                         <label class="form-check-label" for="flexRadioDefault2">
-                                          Cash on deleivery
+                                          Cash on Delivery
                                         </label>
                                       </div>
                                 </div>  -->
