--- a/src/app/pages/home/cancelpolicy/cancelpolicy.component.html
+++ b/src/app/pages/home/cancelpolicy/cancelpolicy.component.html
@@ -17,9 +17,9 @@
                 <div class="col-lg-6">
                     <h1>Cancellation Policy of Geonix</h1>
                     <h4>What is Geonix Cancellation Policy? </h4>
-                    <p>You can cancel an order through the Geonix website/M-site until it has been packed at our warehouse. This includes items purchased on sale also. Any amount paid will be credited into the same payment mode using which the payment was made. Still, if you wish to cancel your order after the order is packed, reach out to our Customer Care team at customercare@blackbrusa.com or on +91 99999 00000.</p>
+                    <p>You can cancel an order through the Geonix website/M-site until it has been packed at our warehouse. This includes items purchased on sale also. Any amount paid will be credited into the same payment mode using which the payment was made. Still, if you wish to cancel your order after the order is packed, reach out to our Customer Care team at customercare@geonix.in or on +91 99999 00000.</p>
                     <h4>How do I cancel my order? </h4>
-                    <p>For order cancellation, please contact our Customer Care team at customercare@blackbrusa.com or on +91- . Kindly 
+                    <p>For order cancellation, please contact our Customer Care team at customercare@geonix.in or on +91- . Kindly 
                         note, orders can only is cancelled before they are packed in our warehouse. </p>
                 </div>
             </div>  
