--- a/src/app/pages/home/contact-us/contact-us.component.html
+++ b/src/app/pages/home/contact-us/contact-us.component.html
@@ -23,7 +23,7 @@
                                   <!-- <h6>Hi,</h6> -->
                                   <p class="mb-1">We hope you’re enjoying shopping with us.
                                 </p>
-                                <p class="mb-1">Should you have any issues related to our products and services, please reach out to our customer care team at customercare@blackbrusa.com or call us on +91-81785 66024.
+                                <p class="mb-1">Should you have any issues related to our products and services, please reach out to our customer care team at customercare@geonix.in or call us on +91-81785 66024.
                                 </p>
                                 <p class="mb-1">We’re available Monday through Saturday from 9:00 AM to 7:00 PM.
                                 </p>
@@ -41,7 +41,7 @@
                           </div>
                           <div class="col-lg-9">
                               <div style="margin-top: 4px;">
-                                <p>customercare@blackbrusa.com</p>
+                                <p>customercare@geonix.in</p>
                               </div>
                           </div>
                       </div>
@@ -76,7 +76,7 @@
                             <div class="col-lg-12">
                                 <div>
                                   <h3 class="mb-1">Trade Sales</h3>
-                                  <p>For wholesale or bulk inquiries, please write to us at customercare@blackbrusa.com</p>
+                                  <p>For wholesale or bulk inquiries, please write to us at customercare@geonix.in</p>
                                 </div>
                             </div>
                         </div>
