--- a/src/app/pages/home/returnexchange/returnexchange.component.html
+++ b/src/app/pages/home/returnexchange/returnexchange.component.html
@@ -18,8 +18,7 @@
                     <h1>Return & Exchange</h1>
 
                     <p>Geonix’s 7-days returns and exchange policy gives you an option to return or exchange items
-                        purchased from the Black
-                        Brusa website/m-site for any reason within 7 days of receipt of the item. We only ask that you
+                        purchased from the website/m-site for any reason within 7 days of receipt of the item. We only ask that you
                         don't use the product and
                         preserve its original condition, tags and packaging. You are welcome to try on a product but
                         please take adequate measures to
@@ -82,7 +81,7 @@
                                 bank account of your choice or take the refund as Geonix store credits for future
                                 purchases with us. If you choose a
                                 bank transfer, please ensure the bank account details you enter are accurate and
-                                complete. Brusa King Private Limited will
+                                complete.Geonix will
                                 not validate a bank account number and will not be responsible for funds transferred to
                                 an unintended recipient.
                             </p>
@@ -104,13 +103,13 @@
                                 address the package to the following address -
                             </p>
                     </ol>
-                    <p class="paragraph">Brusa King Private Limited. </p>
+                    <!-- <p class="paragraph">Brusa King Private Limited. </p>
                     <p class="paragraph">H-9, Sector-33 </p>
                     <p class="paragraph">Gurgaon  </p>
                     <p class="paragraph">Haryana - 122001 </p>
-                    <p class="paragraph">India </p>
+                    <p class="paragraph">India </p> -->
 
-                    <p>We request you to share the courier details with us on customercare@blackbrusa.com or WhatsApp us on +91- for 
+                    <p>We request you to share the courier details with us on customercare@geonix.in or WhatsApp us on +91- for 
                         us to initiate the Rs.100 store credits to your account, valid for all your future purchases with Geonix. Any product 
                         self-shipped after 7 days of raising a return request will not be considered. We will send you a confirmation email as soon as 
                         we receive the shipment at our warehouse. 
@@ -133,12 +132,12 @@
                             all the tags are intact. Please do mention the Order No. and Exchange ID on a piece of paper and place it in the packet. 
                             Kindly address the package to the following address - 
                             </p></li>
-                            <p class="paragraph">Brusa King Private Limited. </p>
+                            <!-- <p class="paragraph">Brusa King Private Limited. </p>
                             <p class="paragraph">H-9, Sector-33 </p>
                             <p class="paragraph">Gurgaon  </p>
                             <p class="paragraph">Haryana - 122001 </p>
-                            <p class="paragraph">India </p>
-                            <p>We request you to share the courier details with us on customercare@blackbrusa.com or WhatsApp us on +91- for 
+                            <p class="paragraph">India </p> -->
+                            <p>We request you to share the courier details with us on customercare@geonix.in or WhatsApp us on +91- for 
                                 us to initiate the Rs.100 store credits to your account, valid for all your future purchases with Geonix. Any product 
                                 self-shipped after 7 days of raising a return request will not be considered. We will send you a confirmation email as soon as 
                                 we receive the shipment at our warehouse 
@@ -156,15 +155,14 @@
 
                     <h4>What should I do if I receive a damaged/defective/incomplete/wrong order from Geonix? </h4>
                     <p>For any defective/ damaged/incomplete/wrong order delivered, we request you to inform us within 48 hours of receiving the 
-                        order with the images of the product received. You can do so by clicking on 'Return’ under the ‘My Orders’ section of the Black 
-                        Brusa Website/M-site and follow the instructions to upload the images. Please keep in mind the following– </p>
+                        order with the images of the product received. You can do so by clicking on 'Return’ under the ‘My Orders’ section of the Website/M-site and follow the instructions to upload the images. Please keep in mind the following– </p>
 
                     <ol>
                         <li>1. <p class="mb-1"> You need to upload a minimum of 3 and a maximum of 5 pictures</p></li>
                         <li>2. <p class="mb-1"> Kindly ensure the images are clear and the damaged/defective/missing part of the outfit is highlighted in red</p></li>
                         <li>3. <p class="mb-1"> You must send us an image of the original labels and tags intact along with the invoice. </p></li>
                     </ol>
-                    <p>In case you face any technical difficulties in following this process, kindly get in touch with us on customercare@blackbrusa.com 
+                    <p>In case you face any technical difficulties in following this process, kindly get in touch with us on customercare@geonix.in 
                         or call us on +91- We will then investigate the case and reply within 48 hours with the best available resolution. 
                         Any such complaint raised after 48 hours of receiving the order may not be considered. </p>
 
