new slider changes

--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
@@ -9,7 +9,7 @@
                         <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Stunning Visuals </h3>
                         <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> PC MONITOR </span></h1>
                         <P> Get Ready To Level UP Your Wrokspace With Our Monitors </P>
-                        <a href="#"
+                        <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 11,'page':1}"
                             class="animate__animated animate__bounceIn animate__delay-2s animate__faster btn shop-white-btn mt-3">
                             Shop now
                             <span>Shop now</span>
@@ -19,7 +19,7 @@
                         <img src="assets/images/24 inch PNG (1).png" class="img-fluid">
                     </div>
                     <div class="discounttext animate__animated animate__bounceIn animate__delay-2s">
-                        <span>45%</span>
+                        <span>50%</span>
                         Discount
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                         <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Secure Storage </h3>
                         <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> HARD DRIVE </span></h1>
                         <P>The Beating Heart Of Your Computer</P>
-                        <a href="#"
+                        <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 2,'page':1}"
                             class="animate__animated animate__bounceIn animate__delay-2s animate__faster btn shop-white-btn mt-3">
                             Shop now
                             <span>Shop now</span>
@@ -49,7 +49,7 @@
                         <h3 class="smart animate__animated animate__flipInY animate__delay-1s"> Performance </h3>
                         <h1 class="animate__animated animate__fadeInDown animate__delay-1s animate__faster"><span> MOTHERBOARD </span></h1>
                         <P>Experiance Top-Notch Performance and Reliability With Our Motherboard.</P>
-                        <a href="#"
+                        <a [routerLink]="['shop/sidebar/3cols/']" [queryParams]="{category: 13,'page':1}"
                             class="animate__animated animate__bounceIn animate__delay-2s animate__faster btn shop-white-btn mt-3">
                             Shop now
                             <span>Shop now</span>
