--- a/src/app/pages/shop/productcheckout/productcheckout.component.html
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.html
@@ -223,7 +223,7 @@
                                             <td><i class="fa-solid fa-indian-rupee-sign"></i>{{discountoffer}}</td>
                                         </tr>
                                         <div class="checkout-discount" style="width: 150%">
-                                            <div id="checkout-discount-form">
+                                            <div class="coupon-div" id="checkout-discount-form">
                                                 <input type="text" class="form-control" required id="checkout-discount-input"
                                                     (click)="addOpacity($event)">
                                                 <label for="checkout-discount-input" class="text-truncate">Have a coupon? <span>Click here to
