--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -33,6 +33,8 @@
                             Okhla Industrial Area,Phase 2,
                             New Delhi-110020</li>
                           <li><b>Phone </b>: ‎+91 8920896230</li>
+                          <li><b>For B2B Enquiry </b> :- <a href='tel: +91 7011788604'>7011788604</a></li>
+                          <li><b>For B2C Enquiry </b> :- <a href='tel: +91 8920896230'>8920896230</a></li>
                           <li><b>For Service</b> : service@geonix.in</li>
                           <li><b>For Queries</b> : contact@geonix.in</li>
                           <li><b>Join Us </b>: hr@geonix.in</li>
