--- a/src/app/pages/shop/productcheckout/productcheckout.component.scss
+++ b/src/app/pages/shop/productcheckout/productcheckout.component.scss
@@ -7,3 +7,19 @@
 .second_box {
     padding-bottom: 12px;
 }
+
+.coupon-div {
+    input {
+        border: 1px solid #f56d08 !important;
+        animation-name: couponborder;  
+        border-radius: 0;
+        animation-duration: 1s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear
+    }
+}
+
+@keyframes couponborder {
+    0% { box-shadow: 0px 0px 0 1px #f56d08; }
+    100% { box-shadow: 0px 0px 0px 7px #f56f0800 }
+}
