new code with alert

--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
@@ -55,6 +55,9 @@
                             <span>Shop now</span>
                         </a>
                     </div>
+                    <div class="motherboard animate__animated animate__bounceInDown animate__delay-1s">
+                        <img src="assets/images/H510.png" class="img-fluid">
+                    </div>
                 </div>
             </ng-template>
         </ngb-carousel>
