--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -13,6 +13,8 @@
 
     <molla-home-slider></molla-home-slider>
 
+    <molla-modal-basic></molla-modal-basic>
+
     <!--  bootstrap slider component end  -->
 
     <div class="bg-transparent">
