--- a/src/app/pages/home/index/modal-basic/modal-basic.component.html
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.html
@@ -5,20 +5,7 @@
 				(click)="modal.dismiss('Cross click')">
 				<i class="fa-solid fa-circle-xmark"></i></button>
 				<div class="bodymain-div">
-					<div class="row">
-						<div class="col-sm-7">
-							<img src="/assets/images/home/whitelogo.png" class="img-fluid popuplogo-image">
-							<p class="oppupfirst-heading">by Subscribe our Newsletter</p>
-							<h2>Get <span> 20% Off </span> Discount Coupon</h2>
-							<p class="popuplast-discription">Get has been the industry's standard dummy text ever since the ey of type andmen offer book.</p>
-							<div class="subscribe-input">
-								<input type="text" placeholder="EMAIL ADDRESS"><button>Subscribe</button>
-							</div>
-						</div>
-						<div class="col-sm-5">
-							<img src="/assets/images/home/banners/12 A SIDE PNG1.png">
-						</div>
-					</div>
+					<img src="assets/images/popup.jpeg" class="img-fluid">
 				</div>
 			</div>
 	</ng-template>
