--- a/src/app/pages/home/index/modal-basic/modal-basic.component.scss
+++ b/src/app/pages/home/index/modal-basic/modal-basic.component.scss
@@ -2,8 +2,8 @@
 
 .modal-body {
     background-image: linear-gradient(171deg, #27aae1, #002d64);
-    padding: 50px;
-    max-width: 85%;
+    padding: 0px;
+    max-width: 60%;
     margin: auto;
     border-radius: 5px;
 
@@ -57,7 +57,12 @@
     }
 }
 
-@media screen and(max-width: 576px) {
+@media screen and (max-width: 576px) {
+
+    // .modal-open .modal {
+    //     display: none;
+    // }
+
     .modal-body {
         padding: 7vw;
         .bodymain-div {    
