--- a/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
+++ b/src/app/pages/home/index/carousel-basic/carousel-basic.component.html
@@ -38,7 +38,7 @@
                         </a>
                     </div>
                     <div class="hdd animate__animated animate__bounceInDown animate__delay-1s">
-                        <img src="assets/images/1 TB SATA (1).png" class="img-fluid">
+                        <img src="assets/images/1 TB SATA.png" class="img-fluid">
                     </div>
                 </div>
             </ng-template>
